--- a/systemd/user/rescrobbled.service
+++ b/systemd/user/rescrobbled.service
@@ -5,7 +5,7 @@ Wants=network-online.target
 After=network-online.target
 
 [Service]
-ExecStart=/usr/sbin/rescrobbled
+ExecStart=/home/icedwolf/.cargo/bin/rescrobbled
 
 [Install]
 WantedBy=default.target
