--- a/waybar/config
+++ b/waybar/config
@@ -19,10 +19,12 @@
         "format-alt": "{:%Y-%m-%d}"
     },
     "cpu": {
-        "format": "{usage}% "
+        "format": "{usage}% ",
+        "interval": 1,
     },
     "memory": {
-        "format": "{}% "
+        "format": "{}% ",
+        "interval": 1,
     },
     "battery": {
         "bat": "BAT0",
