--- a/waybar/config
+++ b/waybar/config
@@ -16,6 +16,7 @@
         "spacing": 5
     },
     "clock": {
+        "interval": 1,
         "format": "{:%H:%M:%S - %m-%d}",
     },
     "cpu": {
@@ -33,7 +34,7 @@
             "critical": 15
         },
         "format": "{capacity}% {icon}",
-        "format-icons": ["", "", "", "", ""]
+        "format-icons": [" ", " ", " ", " ", " "]
     },
     "network": {
         "format-wifi": "{essid} ({signalStrength}%) ",
