--- a/waybar/config
+++ b/waybar/config
@@ -20,11 +20,11 @@
         "format": "{:%H:%M:%S - %m-%d}",
     },
     "cpu": {
-        "format": "{usage}% ",
+        "format": "CPU:{usage}% ",
         "interval": 1,
     },
     "memory": {
-        "format": "{}% ",
+        "format": "RAM:{}% ",
         "interval": 1,
     },
     "battery": {
@@ -37,9 +37,9 @@
         "format-icons": [" ", " ", " ", " ", " "]
     },
     "network": {
-        "format-wifi": "{essid} ({signalStrength}%)  ",
-        "format-ethernet": "{ifname}: {ipaddr}/{cidr} ",
-        "format-disconnected": "Disconnected ⚠"
+        "format-wifi": "{essid} ({signalStrength}%)   ",
+        "format-ethernet": "{ifname}: {ipaddr}/{cidr}  ",
+        "format-disconnected": "Disconnected ⚠ "
     },
     "pulseaudio": {
         "format": "{volume}% {icon}",
