--- a/sway/config
+++ b/sway/config
@@ -1,7 +1,6 @@
 set $WOBSOCK $XDG_RUNTIME_DIR/wob.sock
 exec mako 
 exec rm -f $WOBSOCK && mkfifo $WOBSOCK && tail -f $WOBSOCK | wob
-set $wall $HOME/Pictures/walls/
 set $mod Mod4
 set $left h
 set $down j
@@ -11,27 +10,28 @@ set $term alacritty
 set $menu fuzzel | xargs swaymsg exec --
 bindsym $mod+d exec $menu
 
-#clipboard
+# Clipboard
 exec wl-paste --watch cliphist store
 set $clipboard cliphist list | fuzzel -I -d | cliphist decode | wl-copy
 bindsym $mod+p exec $clipboard
 bindsym $mod+shift+p exec cliphist wipe | notify-send "Clipboard" "Cleared"
 
+# Wallpaper
+set $wall $HOME/Pictures/walls/
+bindsym $mod+c exec waypaper
+output HDMI-A-1 bg $wall/4.jpg fill
+output eDP-1 bg $wall/ggdc_wall.png fill
+
 # Lockscreen
 set $lock swaylock --image $wall/ggdc_wall.png -s fill 
 bindsym $mod+Escape exec playerctl pause && $lock
 
-# FZF KILL 
+# FZF KILL
 bindsym $mod+delete exec kill_ps
-
 bindsym $mod+tab exec window_selector
-bindsym $mod+c exec waypaper
 
 # Passmenu
 bindsym $mod+apostrophe exec passotp
-
-output HDMI-A-1 bg $wall/4.jpg fill
-output eDP-1 bg $wall/ggdc_wall.png fill
 
 output eDP-1 {
     position 1920 0
@@ -136,15 +136,15 @@ bar {
     font Noto Mono Nerd Font 10
 }
 
-#toggle bar 
+# Toggle bar
 bindsym $mod+o exec killall -SIGUSR1 waybar | notify-send "Waybar" "Toggle ($mod+o)"
 
 gaps inner 1
 gaps outer 1
 gaps horizontal 1
 gaps vertical 1
-# remove window title bar
-default_border none
+
+# Remove window title bar
 for_window [class=".*"] border pixel 1
 hide_edge_borders smart_no_gaps
 smart_gaps on
