--- a/wob/wob.ini
+++ b/wob/wob.ini
@@ -1,14 +1,14 @@
-timeout = 1000
+timeout = 750
 width = 400
 height = 50
-border_offset = 4
-border_size = 4
-bar_padding = 4
+border_offset = 1
+border_size = 1
+bar_padding = 1
 margin = 1
-anchor = center
+anchor = top left
 overflow_mode = nowrap
 output_mode = all
 background_color = 111111cc
-border_color = aa00ffcc
+border_color = 333333cc
 overflow_background_color = 000000cc
-overflow_border_color = 4fbfaacc
+overflow_border_color = 444444cc
