--- a/sway/config
+++ b/sway/config
@@ -25,7 +25,7 @@ output eDP-1 bg $wall/ggdc_wall.png fill
 
 # Lockscreen
 set $lock swaylock --image $wall/ggdc_wall.png -s fill 
-bindsym $mod+Escape exec playerctl pause && $lock
+bindsym $mod+Escape exec $spot -s pause && $lock
 
 # FZF KILL
 bindsym $mod+delete exec kill_ps
@@ -37,6 +37,7 @@ bindsym $mod+apostrophe exec passotp
 floating_modifier $mod normal
 
 # Media keys
+set $spot playerctl -p ncspot
 bindsym XF86AudioRaiseVolume exec amixer sset Master 5%+ | sed -En 's/.*\[([0-9]+)%\].*/\1/p' | head -1 > $WOBSOCK
 bindsym XF86AudioLowerVolume exec amixer sset Master 5%- | sed -En 's/.*\[([0-9]+)%\].*/\1/p' | head -1 > $WOBSOCK
 bindsym Shift+XF86AudioRaiseVolume exec amixer sset Capture 5%+ | sed -En 's/.*\[([0-9]+)%\].*/\1/p' | head -1 > $WOBSOCK
@@ -44,9 +45,9 @@ bindsym Shift+XF86AudioLowerVolume exec amixer sset Capture 5%- | sed -En 's/.*\
 bindsym XF86AudioMute exec amixer sset Master toggle | sed -En '/\[on\]/ s/.*\[([0-9]+)%\].*/\1/ p; /\[off\]/ s/.*/0/p' | head -1 > $WOBSOCK
 bindsym XF86MonBrightnessDown exec brightnessctl set 5%- | sed -En 's/.*\(([0-9]+)%\).*/\1/p' > $WOBSOCK
 bindsym XF86MonBrightnessUp exec brightnessctl set +5% | sed -En 's/.*\(([0-9]+)%\).*/\1/p' > $WOBSOCK
-bindsym --locked XF86AudioPlay exec playerctl play-pause | sleep 0.2 && notify-send "playerctl" "$(playerctl status) - $(playerctl metadata --format '{{artist}} - {{title}}')"
-bindsym XF86AudioNext exec playerctl next
-bindsym XF86AudioPrev exec playerctl previous
+bindsym --locked XF86AudioPlay exec $spot -s play-pause | sleep 0.2 && notify-send "playerctl" "$(playerctl status) - $(playerctl metadata --format '{{artist}} - {{title}}')"
+bindsym XF86AudioNext exec $spot next
+bindsym XF86AudioPrev exec $spot previous
 bindsym XF86Search exec $menu
 bindsym Print exec sway-interactive-screenshot
 
