--- a/waybar/config
+++ b/waybar/config
@@ -1,5 +1,5 @@
 {
-    "layer": "top",
+    "layer": "bottom",
     "position": "top",
     "height": 19,
     "modules-left": ["sway/workspaces", "custom/spotify"],
