changed tmux theme

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -7,14 +7,6 @@ set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'dracula/tmux'
-set -g @plugin 'schasse/tmux-jump'
-set -g @plugin 'sainnhe/tmux-fzf'
-
-run -b '~/.config/tmux/plugins/tpm/tpm'
 set -s escape-time 0
 
 bind C-v paste-buffer
@@ -26,8 +18,11 @@ bind -n M-j select-pane -D
 bind -n M-k select-pane -U
 bind -n M-l select-pane -R
 
-set -g @dracula-plugins "git kubernetes-context network-vpn"
-set -g @dracula-show-powerline true
-set -g @dracula-refresh-rate 10
-set -g @dracula-kubernetes-context-colors "pink dark_gray"
-set -g @dracula-border-contrast true
+# List of plugins
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'schasse/tmux-jump'
+set -g @plugin 'sainnhe/tmux-fzf'
+set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'tmux-plugins/tpm'
+set -g @catppuccin_flavour 'mocha'
+run -b '$HOME/.config/tmux/plugins/tpm/tpm'
