--- a/sway/config
+++ b/sway/config
@@ -23,19 +23,6 @@ bindsym $mod+r exec waypaper --restore --random
 output HDMI-A-1 bg $wall/4.jpg fill
 output eDP-1 bg $wall/ggdc_wall.png fill
 
-# Lockscreen
-set $lock swaylock --image $wall/ggdc_wall.png -s fill 
-bindsym $mod+Escape exec $spot -s pause && $lock
-
-# FZF KILL
-bindsym $mod+delete exec kill_ps
-bindsym $mod+tab exec window_selector
-
-# Passmenu
-bindsym $mod+apostrophe exec passotp
-
-floating_modifier $mod normal
-
 # Media keys
 set $spot playerctl -p ncspot
 bindsym XF86AudioRaiseVolume exec amixer sset Master 5%+ | sed -En 's/.*\[([0-9]+)%\].*/\1/p' | head -1 > $WOBSOCK
@@ -50,6 +37,19 @@ bindsym XF86AudioNext exec $spot next
 bindsym XF86AudioPrev exec $spot previous
 bindsym XF86Search exec $menu
 bindsym Print exec sway-interactive-screenshot
+
+# Lockscreen
+set $lock swaylock --image $wall/ggdc_wall.png -s fill 
+bindsym $mod+Escape exec $spot -s pause && $lock
+
+# FZF KILL
+bindsym $mod+delete exec kill_ps
+bindsym $mod+tab exec window_selector
+
+# Passmenu
+bindsym $mod+apostrophe exec passotp
+
+floating_modifier $mod normal
 
 bindsym $mod+Up exec makoctl restore
 bindsym $mod+Down exec makoctl dismiss -a
@@ -131,6 +131,9 @@ hide_edge_borders smart_no_gaps
 # Windows
 for_window [class=".*"] border pixel 1
 
+titlebar_border_thickness 1
+titlebar_padding 3 1
+
 ### Colors
 client.focused            #c5c8c6   #1d1f21   #00ff00    #ffffff    #00ff00
 client.unfocused          #1d1f21   #1d1f21   #ffffff    #000000    #1d1f21
@@ -150,11 +153,6 @@ exec waypaper --restore --random
 
 # Set default brightness
 exec brightnessctl set 100% | echo 100 > $WOBSOCK
-
-# ETC default config removed from include to keep configs in one file
-exec systemctl --user import-environment DISPLAY WAYLAND_DISPLAY SWAYSOCK XDG_CURRENT_DESKTOP
-exec hash dbus-update-activation-environment 2>/dev/null && \
-     dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY SWAYSOCK XDG_CURRENT_DESKTOP
 
 # Work devices config
 output eDP-1 {
@@ -179,3 +177,8 @@ input * {
     accel_profile flat
     scroll_method two_finger
 }
+
+# ETC default config removed from include to keep configs in one file
+exec systemctl --user import-environment DISPLAY WAYLAND_DISPLAY SWAYSOCK XDG_CURRENT_DESKTOP
+exec hash dbus-update-activation-environment 2>/dev/null && \
+     dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY SWAYSOCK XDG_CURRENT_DESKTOP
