--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -27,4 +27,5 @@ set -g @plugin 'catppuccin/tmux'
 
 set -g @catppuccin_flavour 'mocha'
 
+set -g @catppuccin_status_modules_right "application directory user host"
 run -b '$HOME/.config/tmux/plugins/tpm/tpm'
