--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -26,6 +26,8 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'catppuccin/tmux'
 
 set -g @catppuccin_flavour 'mocha'
+set -g status-interval 1
 
 set -g @catppuccin_status_modules_right "application directory user host"
+
 run -b '$HOME/.config/tmux/plugins/tpm/tpm'
