--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -27,8 +27,8 @@ set -g @plugin 'catppuccin/tmux'
 
 set -g @catppuccin_flavour 'mocha'
 set -g status-interval 1
-set -g @catppuccin_window_current_text "#W" # use "#W" for application instead of directory
+set -g @catppuccin_window_current_text "#W"
 set -g @catppuccin_window_default_text "#W"
-set -g @catppuccin_status_modules_right "application directory user host"
+set -g @catppuccin_status_modules_right "directory user host"
 
 run -b '$HOME/.config/tmux/plugins/tpm/tpm'
