--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -32,3 +32,7 @@ set -g @catppuccin_window_default_text "#W"
 set -g @catppuccin_status_modules_right "directory user host"
 
 run -b '$HOME/.config/tmux/plugins/tpm/tpm'
+
+set pane-active-border-style bg=default,fg=green
+set -g pane-border-lines heavy
+set -g pane-border-indicators both
