tmux -> double border lines (cooler)

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -34,5 +34,5 @@ set -g @catppuccin_status_modules_right "directory user host"
 run -b '$HOME/.config/tmux/plugins/tpm/tpm'
 
 set pane-active-border-style bg=default,fg=green
-set -g pane-border-lines heavy
+set -g pane-border-lines double
 set -g pane-border-indicators both
