--- a/sway/config
+++ b/sway/config
@@ -1,6 +1,4 @@
-set $WOBSOCK $XDG_RUNTIME_DIR/wob.sock
 exec mako
-exec rm -f $WOBSOCK && mkfifo $WOBSOCK && tail -f $WOBSOCK | wob
 set $mod Mod4
 set $left h
 set $down j
@@ -20,19 +18,17 @@ bindsym $mod+shift+p exec cliphist wipe | notify-send "Clipboard" "Cleared"
 set $wall $HOME/Pictures/walls/
 bindsym $mod+c exec waypaper
 bindsym $mod+r exec waypaper --restore --random
-output HDMI-A-1 bg $wall/4.jpg fill
-output eDP-1 bg $wall/ggdc_wall.png fill
 
 # Media keys
 set $spot playerctl -p ncspot
-bindsym XF86AudioRaiseVolume exec amixer sset Master 5%+ | sed -En 's/.*\[([0-9]+)%\].*/\1/p' | head -1 > $WOBSOCK
-bindsym XF86AudioLowerVolume exec amixer sset Master 5%- | sed -En 's/.*\[([0-9]+)%\].*/\1/p' | head -1 > $WOBSOCK
-bindsym Shift+XF86AudioRaiseVolume exec amixer sset Capture 5%+ | sed -En 's/.*\[([0-9]+)%\].*/\1/p' | head -1 > $WOBSOCK
-bindsym Shift+XF86AudioLowerVolume exec amixer sset Capture 5%- | sed -En 's/.*\[([0-9]+)%\].*/\1/p' | head -1 > $WOBSOCK
-bindsym Shift+XF86AudioMute exec amixer sset Capture toggle | sed -En '/\[on\]/ s/.*\[([0-9]+)%\].*/\1/ p; /\[off\]/ s/.*/0/p' | head -1 > $WOBSOCK
-bindsym XF86AudioMute exec amixer sset Master toggle | sed -En '/\[on\]/ s/.*\[([0-9]+)%\].*/\1/ p; /\[off\]/ s/.*/0/p' | head -1 > $WOBSOCK
-bindsym XF86MonBrightnessDown exec brightnessctl set 5%- | sed -En 's/.*\(([0-9]+)%\).*/\1/p' > $WOBSOCK
-bindsym XF86MonBrightnessUp exec brightnessctl set +5% | sed -En 's/.*\(([0-9]+)%\).*/\1/p' > $WOBSOCK
+bindsym XF86AudioRaiseVolume exec amixer sset Master 5%+
+bindsym XF86AudioLowerVolume exec amixer sset Master 5%-
+bindsym Shift+XF86AudioRaiseVolume exec amixer sset Capture 5%+
+bindsym Shift+XF86AudioLowerVolume exec amixer sset Capture 5%-
+bindsym Shift+XF86AudioMute exec amixer sset Capture toggle
+bindsym XF86AudioMute exec amixer sset Master toggle
+bindsym XF86MonBrightnessDown exec brightnessctl set 5%-
+bindsym XF86MonBrightnessUp exec brightnessctl set +5%
 bindsym --locked XF86AudioPlay exec $spot -s play-pause | sleep 0.2 && notify-send "playerctl" "$(playerctl status) - $(playerctl metadata --format '{{artist}} - {{title}}')"
 bindsym XF86AudioNext exec $spot next
 bindsym XF86AudioPrev exec $spot previous
@@ -148,7 +144,7 @@ exec --no-startup-id pgrep teams-for-linux || exec electron24 /opt/teams-for-lin
 exec waypaper --restore --random
 
 # Set default brightness
-exec brightnessctl set 100% | echo 100 > $WOBSOCK
+exec brightnessctl set 100%
 
 # Work devices config
 output eDP-1 {
