fix colorizing the icon on muted

--- a/waybar/config
+++ b/waybar/config
@@ -54,7 +54,7 @@
     "custom/microphone": {
       "format": "{} ",
       "interval": 1,
-      "exec": "amixer get Capture | awk -F'[][]' '/\\[off\\]/{print \"<span foreground=\\\"#FF0000\\\">Muted</span> \"} /\\[on\\]/{print $2\" \"}' | tail -n 1",
+      "exec": "amixer get Capture | awk -F'[][]' '/\\[off\\]/{print \"<span foreground=\\\"#FF0000\\\">Muted </span>\"} /\\[on\\]/{print $2\" \"}' | tail -n 1",
       "return-type": "custom/text",
       "tooltip": true
     },
