--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "zsh/fsh"]
 	path = zsh/fsh
 	url = https://github.com/zdharma-continuum/fast-syntax-highlighting
+[submodule "zsh/zsh-completions"]
+	path = zsh/zsh-completions
+	url = https://github.com/zsh-users/zsh-completions
