alacritty conf | sway wallpaper

--- a/sway/config
+++ b/sway/config
@@ -16,6 +16,7 @@ bindsym $mod+shift+p exec cliphist wipe | notify-send "Clipboard" "Cleared"
 
 # Wallpaper
 set $wall $HOME/Pictures/walls/
+exec swww init
 bindsym $mod+c exec waypaper
 bindsym $mod+r exec waypaper --restore --random
 
