--- a/k9s/config.yaml
+++ b/k9s/config.yaml
@@ -1,17 +1,17 @@
 k9s:
   liveViewAutoRefresh: false
-  screenDumpDir: /home/icedwolf/.local/state/k9s/screen-dumps
   refreshRate: 2
   maxConnRetry: 5
   readOnly: false
   noExitOnCtrlC: false
   ui:
+    skin: nobg
     enableMouse: false
     headless: false
     logoless: false
     crumbsless: false
     noIcons: false
-    skin: nobg
+    reactive: true
   skipLatestRevCheck: false
   disablePodCounting: false
   shellPod:
@@ -29,7 +29,6 @@ k9s:
     tail: 100
     buffer: 5000
     sinceSeconds: -1
-    fullScreenLogs: false
     textWrap: false
     showTime: false
   thresholds:
