--- a/k9s/skins/nobg.yaml
+++ b/k9s/skins/nobg.yaml
@@ -1,38 +1,35 @@
+# -----------------------------------------------------------------------------
+# Transparent skin
+# Preserve your terminal session background color
+# -----------------------------------------------------------------------------
+
+# Skin...
 k9s:
   body:
-    fgColor: green
     bgColor: default
-  promt:
-    fgColor: olive
+  prompt:
     bgColor: default
   info:
-    fgColor: orangered
     sectionColor: default
   dialog:
-    fgColor: orange
     bgColor: default
     labelFgColor: default
     fieldFgColor: default
   frame:
     crumbs:
-      fgColor: darkred
       bgColor: default
     title:
-      fgColor: snow
       bgColor: default
       counterColor: default
     menu:
-      fgColor: snow
-    status:
-      newColor: lime
+      fgColor: default
   views:
     charts:
-      fgColor: snow
       bgColor: default
     table:
       bgColor: default
       header:
-        fgColor: snow
+        fgColor: default
         bgColor: default
     xray:
       bgColor: default
