--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -19,6 +19,7 @@ bind -n M-l select-pane -R
 bind -n M-k select-pane -U
 
 # switch windows alt+number
+bind-key -n M-\' select-window -t 0
 bind-key -n M-1 select-window -t 1
 bind-key -n M-2 select-window -t 2
 bind-key -n M-3 select-window -t 3
