--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -30,6 +30,8 @@ bind-key -n M-7 select-window -t 7
 bind-key -n M-8 select-window -t 8
 bind-key -n M-9 select-window -t 9
 
+set -g renumber-windows on
+
 set -g pane-border-lines double
 set -g pane-border-indicators both
 
