--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -30,6 +30,10 @@ bind-key -n M-7 select-window -t 7
 bind-key -n M-8 select-window -t 8
 bind-key -n M-9 select-window -t 9
 
+# Start windows and panes at 1, not 0
+set -g base-index 1
+setw -g pane-base-index 1
+
 set -g renumber-windows on
 
 set -g pane-border-lines double
