tmux script and config for opening pane in editor

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -13,6 +13,10 @@ bind C-v paste-buffer
 bind % split-window -h -c "#{pane_current_path}"
 bind '"' split-window -v -c "#{pane_current_path}"
 
+#edit pane
+set-option -g history-limit 20000
+bind-key -n M-e run-shell "tmux-capture-pane"
+
 bind -n M-h select-pane -L
 bind -n M-j select-pane -D
 bind -n M-l select-pane -R
@@ -53,3 +57,4 @@ set -g @catppuccin_window_default_text "#W"
 set -g @catppuccin_status_modules_right "directory user host"
 
 run -b '$HOME/.config/tmux/plugins/tpm/tpm'
+
