--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -34,6 +34,15 @@ bind-key -n M-7 select-window -t 7
 bind-key -n M-8 select-window -t 8
 bind-key -n M-9 select-window -t 9
 
+bind-key -r -T prefix M-j resize-pane -U 5
+bind-key -r -T prefix M-k resize-pane -D 5
+bind-key -r -T prefix M-h resize-pane -L 5
+bind-key -r -T prefix M-l resize-pane -R 5
+bind-key -r -T prefix C-j resize-pane -U
+bind-key -r -T prefix C-k resize-pane -D
+bind-key -r -T prefix C-h resize-pane -L
+bind-key -r -T prefix C-l resize-pane -R
+
 # Start windows and panes at 1, not 0
 set -g base-index 1
 setw -g pane-base-index 1
