swapping firefox for mercury

--- a/sway/config
+++ b/sway/config
@@ -137,7 +137,7 @@ workspace_layout tabbed
 # Init apps
 workspace 2
 exec --no-startup-id pgrep alacritty || exec $term --class "terminal" -e tmux
-exec --no-startup-id pgrep firefox-beta-bin || exec firefox-beta-bin
+exec --no-startup-id pgrep mercury-browser || exec mercury-browser
 workspace 1
 exec --no-startup-id pgrep spotify || exec spotify
 exec ferdium --enable-features=UseOzonePlatform --ozone-platform=wayland
