--- a/git/config
+++ b/git/config
@@ -7,3 +7,7 @@
     helper = !/usr/bin/gh auth git-credential
 [init]
 	defaultBranch = main
+[core]
+	pager = diff-so-fancy | less --tabs=4 -RF
+[interactive]
+	diffFilter = diff-so-fancy --patch
