att config | ucontext completion

--- a/waypaper/config.ini
+++ b/waypaper/config.ini
@@ -3,7 +3,7 @@ language = en
 folder = /home/icedwolf/Pictures/walls/
 backend = swww
 monitors = All
-fill = Fill
+fill = fill
 sort = name
 color = #ffffff
 subfolders = True
@@ -11,3 +11,7 @@ swww_transition_type = any
 swww_transition_step = 60
 swww_transition_angle = 1
 swww_transition_duration = 1
+wallpaper = /home/icedwolf/Pictures/walls/b-102.jpg
+show_hidden = False
+post_command = 
+
