--- a/sway/config
+++ b/sway/config
@@ -21,7 +21,6 @@ bindsym $mod+r exec waypaper --restore --random
 bindsym $mod+s exec notify-send "$(favwall)"
 
 # Media keys
-set $spot playerctl -p "spotify"
 bindsym XF86AudioRaiseVolume exec amixer sset Master 5%+
 bindsym XF86AudioLowerVolume exec amixer sset Master 5%-
 bindsym Shift+XF86AudioRaiseVolume exec amixer sset Capture 5%+
@@ -39,7 +38,7 @@ bindsym shift+Print exec sway-interactive-screenshot -s focused-window
 # Lockscreen
 set $wall $HOME/Pictures/walls
 set $lock swaylock --image $HOME/Pictures/walls/ggdc_wall.png -s fill 
-bindsym $mod+Escape exec $spot -s pause && $lock
+bindsym $mod+Escape exec dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Pause && $lock
 
 # FZF KILL
 bindsym $mod+delete exec kill_ps
