--- a/waypaper/config.ini
+++ b/waypaper/config.ini
@@ -11,7 +11,7 @@ swww_transition_type = any
 swww_transition_step = 60
 swww_transition_angle = 1
 swww_transition_duration = 1
-wallpaper = /home/icedwolf/Pictures/walls/ign-0000.png
+wallpaper = /home/icedwolf/Pictures/walls/pinkish.jpeg
 show_hidden = False
 post_command = 
 
