--- a/k9s/config.yaml
+++ b/k9s/config.yaml
@@ -5,7 +5,7 @@ k9s:
   readOnly: false
   noExitOnCtrlC: false
   ui:
-    skin: nobg
+    skin: freak
     enableMouse: false
     headless: false
     logoless: false
