--- a/sway/config
+++ b/sway/config
@@ -173,17 +173,24 @@ input * {
 
 default_border none
 default_floating_border none
-font pango:monospace 0.01
-#titlebar_padding 1
+font pango:monospace 0.001
+titlebar_padding 1
 titlebar_border_thickness 0
 
+#swayfx
 smart_corner_radius on
 corner_radius 10
-default_dim_inactive 0.3
+default_dim_inactive 0.05
+blur_xray disable
 blur enable
 blur_passes 1
 blur_radius 1
+blur_noise 0
+blur_brightness 0.95
+blur_contrast 1.05
+blur_saturation 1.05
 layer_effects "waybar" "blur enable"; shadows enable
+layer_effects "mako" "blur enable"; shadows enable
 shadows on
 shadow_blur_radius 20
 
