--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -58,6 +58,7 @@ set -g @plugin 'schasse/tmux-jump'
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'tmux-plugins/tmux-yank'
 
 set -g @catppuccin_flavour 'mocha'
 set -g status-interval 1
