--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -46,11 +46,12 @@ bind-key -r -T prefix C-l resize-pane -R
 # Start windows and panes at 1, not 0
 set -g base-index 1
 setw -g pane-base-index 1
-
 set -g renumber-windows on
-
 set -g pane-border-lines double
 set -g pane-border-indicators both
+set -g allow-passthrough on
+set -ga update-environment TERM
+set -ga update-environment TERM_PROGRAM
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tmux-sensible'
